--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -2,11 +2,14 @@
     <div class="car-container">
       <!-- IZQUIERDA -->
       <div class="left-panel">
-        <h1>Volkswagen</h1>
-        <p class="price"><span class="price-amount">€25</span> <span class="price-dia">/ día</span></p>
+        <h1>{{ tipoVehiculo?.marca }}</h1>
+        <p class="price">
+          <span class="price-amount">€{{ tipoVehiculo?.precio }}</span>
+          <span class="price-dia">/ día</span>
+        </p>
 
         <div class="main-image">
-          <img src="assets/img/catalogo/7.jpg" alt="Coche sombra">
+          <img [src]="tipoVehiculo?.imagen" [alt]="tipoVehiculo?.modelo">
         </div>
 
         <div class="thumbnails">
@@ -23,32 +26,32 @@
           <div class="spec-card">
             <div class="spec-icon">🏎️</div>
             <span>Transmision</span>
-            <p>Automatico</p>
+            <p>{{ vehiculo?.transmision }}</p>
           </div>
           <div class="spec-card">
             <div class="spec-icon">⛽</div>
             <span>Combustible</span>
-            <p>Diesel</p>
+            <p>{{ vehiculo?.combustible }}</p>
           </div>
           <div class="spec-card">
             <div class="spec-icon">🚪</div>
             <span>Puertas</span>
-            <p>2</p>
+            <p>{{ vehiculo?.puertas }}</p>
           </div>
           <div class="spec-card">
             <div class="spec-icon">❄️</div>
             <span>Aire Acondicionado</span>
-            <p>Yes</p>
+            <p>{{ vehiculo?.aireAcondicionado ? 'Sí' : 'No' }}</p>
           </div>
           <div class="spec-card">
             <div class="spec-icon">🧑‍🤝‍🧑</div>
             <span>Asientos</span>
-            <p>5</p>
+            <p>{{ vehiculo?.plazas }}</p>
           </div>
           <div class="spec-card">
             <div class="spec-icon">🛣️</div>
             <span>Distancia</span>
-            <p>500</p>
+            <p>{{ vehiculo?.autonomia }}</p>
           </div>
         </div>
         <button class="btn-alquilar" (click)="mostrarFormularioAlquilar = true">Alquilar</button>
