--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -8,7 +8,6 @@
         <li><strong>Transmisión:</strong> Automático</li>
         <li><strong>Combustible:</strong> Diesel</li>
         <li><strong>Puertas:</strong> 4</li>
-        <li><strong>Aire Acondicionado:</strong> Sí</li>
         <li><strong>Asientos:</strong> 5</li>
         <li><strong>Distancia:</strong> 500 km</li>
       </ul>
@@ -34,26 +33,29 @@
       <form>
         <h2>Alquilar Vehículo</h2>
         <h3>Información Personal</h3>
-        <input type="text" placeholder="Nombre" class="login-input" />
-        <input type="text" placeholder="Apellido" class="login-input" />
-        <input type="email" placeholder="Correo Electronico" class="login-input" />
-        <input type="tel" placeholder="Telefono" class="login-input" />
-        <input type="text" placeholder="DNI" class="login-input" />
-        <label class="checkbox-row">
+        <input type="text" placeholder="Nombre" class="login-input" [(ngModel)] = "nombre"  name="nombre" [readOnly]="camposBloqueados"/>
+        <input type="text" placeholder="Apellido" class="login-input" [(ngModel)] = "apellidos" name="apellidos" [readOnly]="camposBloqueados"/>
+        <input type="email" placeholder="Correo Electronico" class="login-input" [(ngModel)] = "correo" name="correo" [readOnly]="camposBloqueados"/>
+        <input type="tel" placeholder="Telefono" class="login-input" [(ngModel)] = "telefono" name="telefono" />
+        <input type="text" placeholder="DNI" class="login-input" [(ngModel)] = "dni" name="dni" [readOnly]="camposBloqueados"/>
+       <!--
+         <label class="checkbox-row">
           <input type="checkbox" />
           <span>El DNI es igual que el número de carnet de conducir</span>
         </label>
+        -->
 
-        <h3>Dirección De Facturación</h3>
-        <input type="text" placeholder="Calle" class="login-input" />
-        <input type="text" placeholder="Número" class="login-input" />
-        <input type="text" placeholder="Codigo Postal" class="login-input" />
-        <input type="text" placeholder="Localidad" class="login-input" />
+        <h3>Fechas</h3>
+       <label class="fechaReserva" style="color: white;">Fecha de reserva (inicio)</label>
+       <input type="date" id="fechaReserva" name="fechaReserva" class="login-input" />
+
+       <label class="diasReserva" style="color: white;">Días de reserva</label>
+       <input type="number" id="diasReserva" name="diasReserva" class="login-input" min="1" />
 
         <h3>Metodo De Pago</h3>
-        <!-- Aquí puedes añadir los campos de pago si lo necesitas -->
-
-        <button type="submit" class="login-btn">Confirmar Alquiler</button>
+        <!-- añadir los campos de pago -->
+        <button type="submit" class="login-btn" (click)="confirmarReserva()">Confirmar Alquiler</button>
+        <diV *ngIf = "errorDni" style="color: red;">{{errorDni}}</diV>
       </form>
     </div>
   </div>
