--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -9,7 +9,7 @@
       </p>
 
       <div class="main-image">
-        <img [src]="tipoVehiculo.imagen" [alt]="tipoVehiculo.modelo">
+        <img src="assets/img/catalogo/7.jpg" [alt]="tipoVehiculo.modelo">
       </div>
 
       <div class="thumbnails">
