--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -54,8 +54,11 @@
 
         <h3>Metodo De Pago</h3>
         <!-- añadir los campos de pago -->
+
+        
         <button type="submit" class="login-btn" (click)="confirmarReserva()">Confirmar Alquiler</button>
-        <diV *ngIf = "errorDni" style="color: red;">{{errorDni}}</diV>
+        <diV *ngIf = "errorDni" style="color: red; background-color: tan;">{{errorDni}}</diV>
+       
       </form>
     </div>
   </div>
