--- a/src/app/vistas/especificaciones/especificaciones.component.html
+++ b/src/app/vistas/especificaciones/especificaciones.component.html
@@ -5,4 +5,5 @@
 </app-tipo-vehiculo-banner-first>
 <app-tipo-vehiculo-resennas></app-tipo-vehiculo-resennas>
 <app-preview-catalogo></app-preview-catalogo>
+<app-marcas-block></app-marcas-block>
 <app-footer></app-footer>
