--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -2,7 +2,7 @@
   <div class="car-container">
     <!-- IZQUIERDA -->
     <div class="left-panel">
-      <h1>{{ tipoVehiculo.marca }}</h1>
+      <h1>{{ tipoVehiculo.marca }} {{tipoVehiculo.modelo}}</h1>
       <p class="price">
         <span class="price-amount">€{{ tipoVehiculo.precio }}</span>
         <span class="price-dia">/ día</span>
