--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -62,10 +62,7 @@
           <div class="spec-icon">🎨</div>
           <span>Color</span>
           <div class="color-display">
-            <span
-              class="color-circle"
-              [style.backgroundColor]="vehiculo.color.toLowerCase()"
-            ></span>
+            <span class="color-circle" [style.backgroundColor]="getColorCSS(vehiculo.color)"></span>
             <p>{{ vehiculo.color }}</p>
           </div>
         </div>
@@ -77,8 +74,10 @@
       </div>
 
       <button class="btn-alquilar" (click)="mostrarFormularioAlquilar = true">Alquilar</button>
-      <app-formulario-alquilar
-        *ngIf="mostrarFormularioAlquilar"
+      <app-formulario-alquilar 
+        [tipoVehiculo]="tipoVehiculo" 
+        [vehiculo]="vehiculo" 
+        *ngIf="mostrarFormularioAlquilar" 
         (cerrarModal)="mostrarFormularioAlquilar = false">
       </app-formulario-alquilar>
     </div>
