Refactor vehicle detail button to use method for navigation with query parameters

--- a/src/app/shared/components/preview-catalogo/preview-catalogo.component.html
+++ b/src/app/shared/components/preview-catalogo/preview-catalogo.component.html
@@ -41,7 +41,8 @@
             <span>{{ vehiculo.aireAcondicionado ? 'A/A' : 'Sin A/A' }}</span>
           </div>
         </div>
-        <button class="boton-detalles" [routerLink]="['/especificaciones']">Ver detalles</button>
+        <button class="boton-detalles" (click)="verDetalles(vehiculo)">Ver detalles</button>
+
       </div>
     </div>
   </div>
