Redirect to catalog after delete vehicle

--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -77,7 +77,7 @@
       </div>
 
       <button class="btn-alquilar" (click)="mostrarFormularioAlquilar = true">Alquilar</button>
-      <button class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
+      <button *ngIf="esAdmin" class="btn-eliminar" (click)="eliminarVehiculo()">Eliminar</button>
       <app-formulario-alquilar
         *ngIf="mostrarFormularioAlquilar"
         (cerrarModal)="mostrarFormularioAlquilar = false">
