--- a/src/app/shared/components/catalogo-component/catalogo-component.component.html
+++ b/src/app/shared/components/catalogo-component/catalogo-component.component.html
@@ -86,7 +86,8 @@
         </div>
 
         <!-- Botón de acción -->
-        <button class="boton-detalles">Ver detalles</button>
+        <button class="boton-detalles" (click)="verDetalles(vehiculo)">Ver detalles</button>
+
       </div>
     </div>
   </div>
