--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -72,6 +72,13 @@
           La localidad es obligatoria
         </div>
 
+         <h3>Fechas</h3>
+          <label class="fechaReserva" style="color: white;">Fecha de reserva (inicio)</label>
+          <input type="date" id="fechaReserva" name="fechaReserva" class="login-input" />
+
+          <label class="diasReserva" style="color: white;">Días de reserva</label>
+          <input type="number" id="diasReserva" name="diasReserva" class="login-input" min="1" />
+
         <h3>Método de Pago</h3>
         <select formControlName="metodoPago" class="login-input">
           <option value="" disabled>Selecciona un método de pago</option>
