--- a/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
+++ b/src/app/shared/components/tipo-vehiculo-banner-first/tipo-vehiculo-banner-first.component.html
@@ -54,7 +54,7 @@
           <p>{{ vehiculo.kilometraje }} km</p>
         </div>
         <div class="spec-card">
-          <div class="spec-icon">🛣️</div>
+          <div class="spec-icon">📍</div>
           <span>Ubicación</span>
           <p>{{ vehiculo.ubicacion }}</p>
         </div>
