--- a/src/app/shared/components/perfil-admin/perfil-admin.component.html
+++ b/src/app/shared/components/perfil-admin/perfil-admin.component.html
@@ -85,7 +85,7 @@
             </svg>
             Editar perfil
           </button>
-          <button *ngIf="esCliente" class="perfil-admin-btn secondary" routerLink="/mis-reservas">
+          <button *ngIf="esCliente" class="perfil-admin-btn secondary" (click)="abrirHistorialReservas()">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M12 8v4l3 3m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
             </svg>
@@ -98,3 +98,10 @@
 </div>
 
 <app-editar-perfil *ngIf="showEditPerfilModal" (closeModal)="cerrarEditPerfil()"></app-editar-perfil>
+
+<app-historial-de-reservas 
+  *ngIf="showHistorialReservasModal && usuarioActual"
+  [show]="showHistorialReservasModal"
+  [idUsuario]="usuarioActual.id"
+  (close)="showHistorialReservasModal = false">
+</app-historial-de-reservas>
