--- a/src/app/shared/components/perfil-administracion/perfil-administracion.component.css
+++ b/src/app/shared/components/perfil-administracion/perfil-administracion.component.css
@@ -1,10 +1,13 @@
 .admin-header {
-  display: flex;
-  justify-content: space-between;
+  /* //display: flex;
+  justify-content:space-between; */
   align-items: center;
   max-width: 1200px;
   margin: 32px auto 36px auto;
   padding: 0 18px;
+}
+.lista{
+  list-style-type: none
 }
 
 .admin-title {
